--- a/index.html
+++ b/index.html
@@ -1,87 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Atanu Kumar Bera - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-        }
-        h1, h2, h3 {
-            color: #2c3e50;
-        }
-        ul {
-            list-style-type: square;
-        }
-        section {
-            margin-bottom: 30px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazon</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Atanu Kumar Bera</h1>
+    <header>
+        <div class="navbar">
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
 
-    <section>
-        <h2>About Me</h2>
-        <p>
-            I am a final year B.Tech student in Computer Science and Engineering with a strong interest in Full Stack Web Development 
-            Web Development and Cloud Computing and Software Development. I have basic experience in C (DSA). I’m a developer with a strong foundation in Java, SQL, 
-            and Python, and hands-on experience in building mobile applications using Flutter and Firebase. I enjoy solving problems, learning 
-            new technologies quickly, and working with others to bring ideas to life. I'm currently exploring AI and Machine Learning, with a 
-            focus on creating real-world solutions through smart, efficient code.I’ve built small projects based on real-life problems and
-            currently exploring Web Development. 
-        </p>
-    </section>
+            <div class="nav-address border">
+                <p class="add-first">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-second">India</p>
+                </div>
+            </div>
+            <div class="nav-search">
+                <select class="search-select">
+                    <option>All</option>
+                </select>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div class="nav-signin border">
+                <p><span>Hello, Sign in</span></p>
+                <p class="nav-second">Accounts & Lists</p>
+            </div>
 
-    <section>
-        <h2>Skills</h2>
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+
+
+        </div>
+
+        <div class="pannel">
+            <div class="pannel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="pannel-ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="pannel-deals">
+                Shop deals in Electronics
+            </div>
+        </div>
+    </header>
+
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
+        </div>
+    </div>
+
+    <div class="shop-section">
+        <div class="box1 box">
+           <div class="box-content">
+            <h2>Clothes</h2>
+           <div class="box-img" style="background-image: url('box1_image.jpg');"></div> 
+           <p>See more</p>
+           </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+               <div class="box-img" style="background-image: url('box2_image.jpg');"></div> 
+               <p>See more</p>
+               </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+               <div class="box-img" style="background-image: url('box3_image.jpg');"></div> 
+               <p>See more</p>
+               </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Electronics & Gadgets</h2>
+               <div class="box-img" style="background-image: url('box4_image.jpg');"></div> 
+               <p>See more</p>
+               </div>
+        </div>
+        <div class="box5 box">
+            <div class="box-content">
+             <h2>Beauty Picks</h2>
+            <div class="box-img" style="background-image: url('box5_image.jpg');"></div> 
+            <p>See more</p>
+            </div>
+         </div>
+         <div class="box6 box">
+             <div class="box-content">
+                 <h2>Pet care</h2>
+                <div class="box-img" style="background-image: url('box6_image.jpg');"></div> 
+                <p>See more</p>
+                </div>
+         </div>
+         <div class="box7 box">
+             <div class="box-content">
+                 <h2>New arrivals in Toys</h2>
+                <div class="box-img" style="background-image: url('box7_image.jpg');"></div> 
+                <p>See more</p>
+                </div>
+         </div>
+         <div class="box8 box">
+             <div class="box-content">
+                 <h2>Discover fashion trends</h2>
+                <div class="box-img" style="background-image: url('box8_image.jpg');"></div> 
+                <p>See more</p>
+                </div>
+         </div>
+    </div>
+
+    <footer>
+    <div class="foot-pannel1">
+        Back to Top
+    </div>
+
+    <div class="foot-pannel2">
         <ul>
-            <li>Web Development: HTML & CSS</li>
-            <li>Programming: Java, Python, C, SQL, JavaScript</li>
-            <li>Tools and Platforms: Linux, VS Code, Git, Bash/Shell, Firebase, Flutter</li>
-            <li>Databases: MySQL, MongoDB</li>
-            <li>Concepts: Data Structures & Algorithms, OOPs</li>
-            <li>Core Subjects: Database Management, Operating Systems, Compiler Design</li>
-            <li>Responsive Design</li>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
         </ul>
-    </section>
 
-    <section>
-        <h2>Interests</h2>
         <ul>
-            <li>Web Development</li>
-            <li>UI/UX Design</li>
-            <li>SEO</li>
-            <li>AIML</li>
-            <li>Cloud Computing</li>
-            <li>Open Source Contribution</li>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
         </ul>
-    </section>
 
-    <section>
-        <h2>Projects</h2>
-        <h3>>Amazon E-Commerce Website</h3>
-        <p>An clone of Amazon built with HTML and CSS.</p>
-        <a href="https://github.com/atanukumarbera/Building-Amazon-Clone-using-HTML-CSS" target="_blank">View Project</a>
+        <ul>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+        </ul>
 
-        <h3>>Manasvini</h3>
-        <p>Developed Manasvini, a mental wellness platform offering mood tracking, journaling, meditation, and personalized insights for emotional well-being. </p>
-        
-        <h3>>SmartQuiz</h3>
-        <p>SmartQuiz is a Java-based console application that offers category-wise and mixed trivia quizzes with realtime scoring, fun facts, and persistent high score tracking. It enhances user engagement with motivational feedback and a simple, interactive UI.</p>
-    </section>
+        <ul>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+        </ul>
+    </div>
 
-    <section>
-        <h2>Contact Information</h2>
-        <p>Email: iamatanukumarbera@gmail.com</p>
-        <p>
-            <a href="https://www.linkedin.com/in/atanukumarbera/" target="_blank">LinkedIn</a>
-        </p>
-        <p>
-            <a href="https://github.com/atanukumarbera" target="_blank">GitHub</a>
-        </p>
-    </section>
+    <div class="foot-pannel3">
+        <div class="logo"></div>
+    </div>
+
+    <div class="foot-pannel4">
+        <div class="pages">
+            <a>Conditions of Use</a>
+            <a>Privacy Notice</a>
+            <a>Your Ads Privacy Choices</a>
+        </div>
+
+        <div class="copyright">
+            © 1996-2024, Amazon.com, Inc. or its affiliates
+        </div>
+    </div>
+    </footer>
+
 </body>
+
 </html>
